--- a/football_shop/.env.prod
+++ b/football_shop/.env.prod
@@ -1,7 +1,7 @@
-DB_NAME=<nama database>
-DB_HOST=<host database>
-DB_PORT=<port database>
-DB_USER=<username database>
-DB_PASSWORD=<password database>
+DB_NAME=<omar.suyuf>
+DB_HOST=<152.118.29.139>
+DB_PORT=<5432>
+DB_USER=<omar.suyuf>
+DB_PASSWORD=<LODxbqHi>
 SCHEMA=tutorial
 PRODUCTION=True
